# vector-databases

./: README.md  data.json  docker-compose.yaml  main.py  pyproject.toml  weaviate.py
.devcontainer/: devcontainer.json  setup.sh
langchain_example/: config.py  indexing.py  main.py  retrieve.py
